@@ -14,7 +14,7 @@
 		</center>
 		<hr>
 		<center>
-			<small>Back to the <a href="http://pdb2pqr.sourceforge.net/">main PDB2PQR page</a>.</small>
+			<small>Back to the <a href="http://www.poissonboltzmann.org/pdb2pqr">main PDB2PQR page</a>.</small>
 		</center>
 		<hr>
 		<p>
@@ -37,7 +37,7 @@
 			Fasciculin-1 (<a href="http://www.pdb.org/pdb/explore.do?structureId=1FAS">1FAS</a>)
 		</h3>
 		<p>
-			This 3-finger toxin structure is <a href="http://www.pdb.org/pdb/explore.do?structureId=1FAS">available</a> at high resolution (1.9 &Aring;) and has all its heavy atoms present in the PDB file. We'll use one of the <a href="http://pdb2pqr.sourceforge.net/#availability">PDB2PQR servers</a> to add hydrogens to this protein and optimize their positions.
+			This 3-finger toxin structure is <a href="http://www.pdb.org/pdb/explore.do?structureId=1FAS">available</a> at high resolution (1.9 &Aring;) and has all its heavy atoms present in the PDB file. We'll use one of the <a href="http://www.poissonboltzmann.org/pdb2pqr/d/web-servers">PDB2PQR servers</a> to add hydrogens to this protein and optimize their positions.
 		</p>
 		<ol>
 			<li>From the PDB2PQR server web page, enter <code>1FAS</code> into the PDB ID field.
@@ -159,13 +159,13 @@
 		
 		<!-- <p>Through the use of JavaScript, the APBS input page will be interactive and easy to use. The web interface and Python middleware launches the 
 		command line APBS client with the options selected by the user, and then 
-		provides links to the results of the calculations. The resulting ﬁles can either 
-		be downloaded at this point, or used for the next step of the web interface— 
+		provides links to the results of the calculations. The resulting files can either 
+		be downloaded at this point, or used for the next step of the web interface  
 		visualization. 
 		Visualization will be provided by three visualization packages: Jmol, 
 		VMD, and Chimera. Jmol visualization will involve an in-browser inter- 
 		active Java applet, whereas VMD and Chimera will render a still image or 
-		video oﬄine and oﬀer a link to the user for downloading the ﬁle. -->
+		video and a link to the user for downloading the file. -->
 		
 		<p>This tutorial walks you through the basic steps in performing Poisson-Boltzmann electrostatics calculations for visualization through PDB2PQR and APBS.</p>
         <ol>
